# Project1

./: CMakeLists.txt  MAIN_NO_GUI  hospital.cpp  hospital.h  main.cpp  mainwindow.ui
HospitalGUI/: mainwindow.cpp  mainwindow.h
